# mtgit

./: PLAN.md  README.md  VERIFY_HARDEN_PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/feature-requirements/: 00-overview.md  01-commit.md  02-checkout.md  03-push.md  04-pull.md  05-merge.md  06-rebase.md  07-cherry-pick.md
scripts/: make-fixture.sh
src/: main.tsx  theme.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_graph.rs
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  pty.rs  shellout.rs  state.rs  testutil.rs  watcher.rs
src-tauri/src/core/: advanced.rs  blame.rs  branch.rs  commit.rs  diff.rs  graph.rs  history.rs  mod.rs  ops.rs  refs.rs  repo.rs  stash.rs  status.rs  worktree.rs
src/app/: App.tsx  app.css
src/components/: AppErrorBoundary.tsx  Avatar.tsx  ConflictBanner.tsx  ContextMenu.tsx  DetachedHeadBanner.tsx  DialogHost.tsx  ToastContainer.tsx  app-error-boundary.css  avatar.css  conflictbanner.css  contextmenu.css  detached-head.css  dialog.css  toasts.css
src/features/commit-detail/: DetailPanel.tsx  FileList.tsx  detail.css  filelist.css
src/features/diff/: BlameView.tsx  DiffView.tsx  FileContentView.tsx  FileViewer.tsx  HistoryView.tsx  blame.css  diff.css  fileviewer.css  highlight.ts  history.css  wordDiff.ts
src/features/graph/: CherryPickPopover.tsx  CompareDialog.tsx  (+7 more)
src/ipc/: commands.ts  events.ts  types.ts
src/lib/: checkout.ts  clipboard.ts  refname.ts  time.ts
src/stores/: conflict.ts  dialog.ts  session.ts  toasts.ts
(+16 files in other folders)
